# esp32-10baset1l-mqtt

./: .gitignore  Especificacion_Firmware_Nodo_Sensor.md  README.md  sdkconfig  sdkconfig.defaults
components/adin1110/: CMakeLists.txt  adin1110.c
components/adin1110/include/: adin1110.h
components/app_config/: CMakeLists.txt  Kconfig  app_config.c
components/app_config/include/: app_config.h
components/co_sensor/: CMakeLists.txt  Kconfig  co_sensor.c
components/co_sensor/include/: co_sensor.h
components/eth_adin1110/: CMakeLists.txt  Kconfig  eth_adin1110.c
components/eth_adin1110/include/: eth_adin1110.h
components/i2c_sensor/: CMakeLists.txt  Kconfig  cpp_driver.md  i2c_sensor.c
components/i2c_sensor/drivers/: multigas.c  multigas.h  oxygen_sen0322.c  oxygen_sen0322.h  ozone_sen0321.c  ozone_sen0321.h  simulated.c  simulated.h
components/i2c_sensor/include/: i2c_sensor.h  i2c_sensor_drv.h
components/no_os_port/: CMakeLists.txt  no_os_alloc.c  no_os_crc8.c  no_os_delay.c  no_os_gpio.c  no_os_spi.c  oa_tc6.c
components/no_os_port/include/: no_os_alloc.h  no_os_crc8.h  no_os_delay.h  no_os_gpio.h  no_os_spi.h  no_os_util.h  oa_tc6.h
components/sensor_payload/: CMakeLists.txt  sensor_payload.c
components/sensor_payload/include/: sensor_payload.h
gateway_beagleplay_node/: all_flows.json  conectar_wifi.sh  flows.json  receptor_bench.py  receptor_tcp.py
gateway_beagleplay_node/spe_project/: docker-compose.yml  setup.sh
main/: CMakeLists.txt  app_main.c  idf_component.yml
